fix(Breadcrumbs): Breadcrum entries should not squash into another

--- a/packages/design-system/src/components/Breadcrumbs/Breadcrumbs.module.scss
+++ b/packages/design-system/src/components/Breadcrumbs/Breadcrumbs.module.scss
@@ -13,7 +13,11 @@
 
 	.entry {
 		max-width: tokens.$coral-size-limit;
-		min-width: 0;
+		min-width: tokens.$coral-size-xl;
+
+		&.collapsed {
+			flex-shrink: 0;
+		}
 
 		[data-ellipsis='true'] {
 			white-space: nowrap;
